LR2 (task3) is done

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,12 @@ LR1/task3/.vs/task3/v16/Browse.VC.db-shm
 LR1/task3/.vs/task3/v16/ipch/AutoPCH/6ec5bcd35aebf95a/TASK3.ipch
 LR1/task3/Debug/task3.ilk
 LR1/task3/Debug/task3.pdb
+LR2/task3/.vs/task3/v16/.suo
+LR2/task3/.vs/task3/v16/Browse.VC.db
+LR2/task3/.vs/task3/v16/Browse.VC.db-shm
+LR2/task3/.vs/task3/v16/Browse.VC.db-wal
+LR2/task3/.vs/task3/v16/Browse.VC.opendb
+LR2/task3/.vs/task3/v16/ipch/AutoPCH/f2a763629930b7c8/TASK3.ipch
+LR2/task3/Debug/task3.exe
+LR2/task3/Debug/task3.ilk
+LR2/task3/Debug/task3.pdb
